fix filter page left-nav issues
filter icon got squished on short screen
left nav did not scroll on short screens

--- a/src/pageletes/icons/IconFilters.module.css
+++ b/src/pageletes/icons/IconFilters.module.css
@@ -10,22 +10,12 @@
   position: sticky;
   left: 0;
   top: var(--header-height);
-  height: 100vh;
+  height: calc(100vh - var(--header-height));
   overflow: auto;
 }
 
-.icon-filters__toggle {
-  pointer-events: none;
-  position: relative;
-}
-
 .icon-filters__toggle button {
-  position: absolute;
-  left: 0.6rem;
-}
-
-.icon-filters .icon-filters__toggle p {
-  margin-left: 3.5rem;
+  padding-left: 0;
 }
 
 .licon-filters + .icon-filters__scrim {
@@ -114,8 +104,8 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  padding: 6px 0px 7px 20px;
   border-bottom: 1px solid var(--navbar-border-bottom-color);
-  height: 3rem;
 }
 
 .icon-filters__section {
